# jemallocator

./: .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: main.yml
benches/: roundtrip.rs
ci/: run.sh
ctl/: Cargo.toml
ctl/src/: profiling.rs  raw.rs
global/: Cargo.toml
jemalloc/: README.md
jemalloc-ctl/: Cargo.toml  README.md  dump  test
jemalloc-ctl/src/: error.rs  keys.rs  lib.rs  macros.rs  opt.rs  prof.rs  profiling.rs  raw.rs
jemalloc-sys/: Cargo.toml  README.md  build.rs  build_support.rs
jemalloc-sys/configure/: VERSION  configure
jemalloc-sys/src/: env.rs  lib.rs  msvc_stub.rs  pthread_atfork.c
jemalloc-sys/tests/: malloc_conf_set.rs  unprefixed_malloc.rs
jemalloc/src/: lib.rs
jemallocator/: Cargo.toml  README.md
jemallocator-global/: Cargo.toml  README.md
jemallocator-global/src/: lib.rs
jemallocator/benches/: roundtrip.rs
jemallocator/src/: lib.rs
jemallocator/tests/: background_thread_enabled.rs  ffi.rs  smoke_ffi.rs
src/: lib.rs
sys/: README.md
sys/src/: lib.rs
systest/src/: main.rs
test-dylib/: Cargo.toml  build.rs
test-dylib/src/: dep.c  main.rs
tests/: background_thread_enabled.rs  ffi.rs  malloctl.rs  smoke.rs
