[package]
name = "tikv-jemalloc-sys"
version = "0.6.1+5.3.1-0-g81034ce1f1373e37dc865038e1bc8eeecf559ce8"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>",
    "The TiKV Project Developers",
]
build = "build.rs"
links = "jemalloc"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tikv/jemallocator"
homepage = "https://github.com/tikv/jemallocator"
documentation = "https://docs.rs/tikv-jemallocator-sys"
keywords = ["allocator", "jemalloc"]
description = """
Rust FFI bindings to jemalloc
"""
edition = "2018"
rust-version = "1.71.0"

[badges]
codecov = { repository = "tikv/jemallocator" }
is-it-maintained-issue-resolution = { repository = "tikv/jemallocator" }
is-it-maintained-open-issues = { repository = "tikv/jemallocator" }
maintenance = { status = "actively-developed" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(jemallocator_docs)',
    'cfg(prefixed)',
] }

[dependencies]
libc = { version = "^0.2.8", default-features = false }

[build-dependencies]
cc = "^1.0.13"

[features]
default = ["background_threads_runtime_support"]
profiling = []
debug = []
background_threads_runtime_support = []
background_threads = [ "background_threads_runtime_support" ]
stats = []
unprefixed_malloc_on_supported_platforms = []
override_allocator_on_supported_platforms = [ "unprefixed_malloc_on_supported_platforms" ]
disable_initial_exec_tls = []
disable_cache_oblivious = []

[package.metadata.docs.rs]
rustdoc-args = [ "--cfg",  "jemallocator_docs" ]
